# jack-audio

./: .gitignore  CMakeLists.txt  DESCRIPTION  DESCRIPTION_ALSA  DESCRIPTION_JACK  Make.inc  Makefile  Makefile_alsa  Makefile_jack  Makefile_octave  README.md  TODO.txt  aaudio.c  aaudio.cc  aaudio.h  aaudio_20071114.cc  build_aaudio.m  build_pkg.sh  jaudio.cc  jaudio.h  jaudio_play.cc  jaudio_playrec.cc  oct_actrecord.cc  oct_ainfo.cc  oct_aplay.cc  oct_aplay_20071107.cc  oct_aplay_no_ploll.cc  oct_aplayrec.cc  oct_aplayrec_no_poll.cc  oct_arecord.cc  oct_arecord_no_poll.cc  oct_atrecord.cc  oct_jinfo.cc  oct_jplay.cc  oct_jplayrec.cc  oct_jrecord.cc  oct_jtrecord.cc  octave.cmake  pcm.c  test.m  (+2 more)
alsa/: Makefile_alsa  aaudio.h  oct_ainfo.cc  oct_aplay.cc  oct_aplay_no_ploll.cc  oct_aplayrec.cc  oct_arecord.cc
alsa/m_files/: testit.m
alsa/misc/: pcm.c
cmake/Modules/: FindJACK.cmake
include/: jaudio.h
m_files/: loopback_test.m
oct/: CMakeLists.txt  oct_jinfo.cc  oct_jplay.cc  oct_jplayrec.cc  oct_jrecord.cc  oct_jtrecord.cc
src/: jaudio_play.cc  jaudio_playrec.cc  jaudio_record.cc
